--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 html {
   box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 700;
 }
-
 *,
 *::before,
 *::after {
@@ -9,12 +10,28 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-
-  /*
-   * CSS image reference example.
-   */
-  background-image: url('./images/bg-pattern.png');
+  background-color: lavender;
+}
+.timer {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  padding: 40px;
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: darkgrey;
+  border-radius: 50%;
+  width: 900px;
+}
+.field {
+  border: solid darkslategray 1px;
+  padding: 15px;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+}
+.label {
+  margin-left: 10px;
 }
